8/3/10 add listener for pH paper "dipped height" property
8/3/10 clean up listener stuff in PHPaper
8/3/10 added interpolation between colors for the PhPaper
8/3/10 store the dipped height for when the ph paper is removed from the water
8/4/10 constants for min/max pH
8/3/10 second pass at pH paper
8/3/10 first pass at conductivity tester model
8/2/10 first pass at pH paper (geometry and dragging)
8/2/10 misc javadoc
8/2/10 add model element for reaction equation
8/2/10 fix names of add/remove listener methods
8/2/10 delete ABSClock, document why dummy clock in ABSModule
8/2/10 limit nodes to knowledge of specific model element, rather than the entire model
8/2/10 move "water visible" property to magnifying glass model
8/2/10 SolutionRepresentation base class
8/2/10 adjust layout and location of pH meter so that we have room to dip other things in beaker
7/1/10 remove bogus import of advanced-acid-base-solutions
# 0.00.15 (42038) Jun 30, 2010
6/30/10 misc cleanup before putting sim on hold, pending CAB feedback
6/30/10 constrain dragging of pH meter so that only the probe can be submerged
6/30/10 add pH meter shaft and tip sizes to the model, so we can tell when the meter is fully submerged
6/29/10 refine HTMLCheckBox disabled color
6/29/10 move reset functionality into model, factory for creating default solution for each module
6/25/10 disable pickability of nodes that are not interactive
6/25/10 fix pickability of beaker so that tools can be picked when they are immersed in solution
6/25/10 show only molecules in magnifying glass, don't show tools or any other nodes behind the glass
6/25/10 workaround to properly gray out HTML text when "Show H2O Molecules" check box is disabled
6/21/10 implement Reset All for existing functionality
6/19/10 deadline met for interviews (6/21/10)
# 0.00.14 (41807) Jun 19, 2010
6/19/10 dev version with fixes and 6/18/10 change requests
6/19/10 in magnifying glass view, hide minor species for acid (OH-) and base (H3O+)